# causlane

./: .cli-checker.toml  .gitignore  .repomixignore  AGENTS.md  AI_USAGE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.parallel-dev  PUBLISHING.md  README.md  RELEASE.md  SECURITY.md  bacon.toml  deny.toml  justfile  process-compose.with-bacon.yaml  process-compose.yaml  rust-toolchain.toml
.cargo/: config.toml
.devinfra/: cache-classes.toml  checker.toml  commands.toml  env.coverage  env.dev  formal-smoke-tool-versions.json  project-policy.toml  tool-versions.json  watch.toml
.github/: pull_request_template.md
contracts/: contract-tests.yaml
crates/causlane/: Cargo.toml  README.md
crates/causlane-cli/: Cargo.toml  README.md
crates/causlane-cli/fixtures/.devinfra/: tool-versions.json
crates/causlane-cli/fixtures/contracts/scenarios/: release_promote_success.scenario.yaml
crates/causlane-cli/src/: cli_contract.rs  cli_explain.rs  cli_graph.rs  cli_graph_export.rs  cli_parse.rs  cli_replay.rs  cli_scenario.rs  cli_shared.rs  cli_smoke_tests.rs  cli_support_bundle.rs  formal_artifacts.rs  formal_doctor.rs  formal_generate.rs  lib.rs  main.rs  scenario_facts.rs  tool_versions.rs
crates/causlane-cli/src/app/: mod.rs
crates/causlane-cli/src/app/formal/: coverage.rs  error.rs  io.rs  mod.rs  negative.rs  receipt.rs  tests.rs
crates/causlane-codegen/: Cargo.toml  README.md
crates/causlane-codegen/src/: alloy.rs  alloy_authz.rs  alloy_bindings.rs  alloy_bindings_tests.rs  alloy_drain.rs  alloy_events.rs  alloy_merge.rs  artifact.rs  contract.rs  coverage.rs  error.rs  identifier_check.rs  ir.rs  kani_target.rs  lean4_target.rs  lib.rs  obligations.rs  p_monitors.rs  receipt.rs  stale.rs  targets.rs  verus_target.rs
crates/causlane-codegen/tests/: multi_action_alloy.rs  public_api.rs
crates/causlane-contracts/: Cargo.toml  README.md
crates/causlane-contracts/fixtures/contracts/examples/: release_promote.registry.yaml
crates/causlane-contracts/src/: attestation.rs  bundle.rs  canonical.rs  contract.rs  examples.rs  hmac.rs  invariants.rs  lib.rs  plan_hash.rs  plan_template_cache.rs  registry.rs  serde_numeric.rs  sha256.rs  template.rs  tests.rs
crates/causlane-core/: Cargo.toml  README.md
crates/causlane-core/src/: contract.rs  integration.rs  kernel.rs  lib.rs  ports.rs  prelude.rs  protocol.rs  testing.rs
crates/causlane-core/src/application/: mod.rs  ports.rs  use_cases.rs
crates/causlane-core/src/domain/: action.rs  approval.rs  approval_stepup.rs  audit.rs  authz.rs  authz_policy.rs  capability.rs  constraint.rs  constraint_runtime.rs  constraint_spec.rs  constraint_update.rs  drain.rs  drain_protocol.rs  effect.rs  frontier.rs  graph_index.rs  hashing.rs  lane.rs  lifecycle.rs  mod.rs  overlay.rs  projection_authz.rs  redaction.rs  redaction_policy.rs  routing.rs  tier.rs  tracing.rs  why_not_parallel.rs
crates/causlane-core/src/integration/: tests.rs
crates/causlane-core/tests/: proptest_protocol_properties.rs
crates/causlane-formal/: Cargo.toml  README.md
crates/causlane-formal/src/: lib.rs
crates/causlane-formal/tests/: proptest_smoke.rs
crates/causlane-replay/: Cargo.toml  README.md
crates/causlane-replay/fixtures/contracts/examples/: multi_action_reference.registry.yaml  projection_readonly.registry.yaml  release_promote.trace.json
crates/causlane-replay/fixtures/contracts/scenarios/: approval_wrong_plan_invalid.scenario.yaml  execution_without_barrier_invalid.scenario.yaml  execution_without_capability_invalid.scenario.yaml  multi_action_reference.scenario.yaml  projection_without_anchor_invalid.scenario.yaml  read_only_sidecar_success.scenario.yaml
crates/causlane-replay/src/: authz.rs  contract.rs  error.rs  explain.rs  lib.rs  lifecycle.rs  outcome.rs  tests.rs  trace.rs  trace_lowering.rs
crates/causlane-replay/src/tests/: attestation.rs
crates/causlane-replay/tests/: conflict_free_parallelism.rs  error_diagnostics.rs  explain.rs  multi_action_reference.rs  mutation_fuzz.rs  projection_read_sidecar.rs  proptest_parse_boundaries.rs
crates/causlane-runtime/: Cargo.toml  README.md
crates/causlane-runtime/src/: authz.rs  guarded_executor.rs  lib.rs  linear_host.rs  operational_slo.rs  partitions.rs  projection_guard.rs  shadow.rs  test_support.rs
crates/causlane-runtime/src/adapters/: apalis.rs  audit.rs  authzen.rs  casbin.rs  cedar.rs  certification.rs  engine.rs  executor.rs  mod.rs  openfga.rs  otel.rs  restate.rs  tracing.rs
crates/causlane-runtime/src/adapters/audit/: postgres.rs  sqlite.rs
crates/causlane-runtime/src/in_process/: coordinator.rs  mod.rs  tests.rs  worker.rs
crates/causlane-runtime/src/in_process/tests/: backpressure.rs  recovery.rs  retention.rs  validation.rs
crates/causlane/benches/: dispatch_baseline_bench_suite.rs
crates/causlane/src/: lib.rs
crates/causlane/tests/: public_api.rs
docs/: 00-project-purpose.md  01-glossary.md  02-architecture-overview.md  03-hexagonal-architecture.md  04-development-principles.md  05-formal-modeling-strategy.md  06-runtime-and-performance.md  07-security-and-authz.md  08-extension-process.md  09-naming-and-publishing.md  10-roadmap.md  11-contract-hardening-plan.md  README.md  ci-dispatcher.md  context-pack-hygiene.md  formal-exceptions.json  formal-exceptions.md  formal-models-implementation-brief.md  setup.md  (+4 more)
examples/reference-integration/: Cargo.toml  README.md
examples/reference-integration/src/: lib.rs  main.rs
examples/replay-diagnostics/: Cargo.toml  README.md
examples/replay-diagnostics/src/: lib.rs  main.rs
examples/replay-diagnostics/tests/: replay_diagnostics.rs
fuzz/: Cargo.toml
fuzz/corpus/registry_yaml_compile/: numeric_extremes.yaml
fuzz/corpus/replay_scenario_yaml/: numeric_extremes.yaml
fuzz/corpus/replay_trace_json/: numeric_extremes.json
fuzz/fuzz_targets/: replay_scenario_yaml.rs  requirement_from_tokens.rs  runtime_guarded_audit_projection.rs
verification/formal-smoke/fuzz/: Cargo.toml
verification/formal-smoke/fuzz/fuzz_targets/: gate_before_use.rs
(+564 files in other folders)
