[workspace]
resolver = "2"
members = [
    "crates/causlane",
    "crates/causlane-core",
    "crates/causlane-contracts",
    "crates/causlane-codegen",
    "crates/causlane-runtime",
    "crates/causlane-replay",
    "crates/causlane-cli",
]
# The cargo-fuzz crate is a standalone workspace (needs nightly + sanitizer
# runtime); keep it out of stable `cargo --workspace` builds/checks.
exclude = ["fuzz"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Boot and Pencil <lobanov@bootandpencil.com>"]
repository = "https://github.com/Boot-and-Pencil/causlane"
homepage = "https://github.com/Boot-and-Pencil/causlane"
documentation = "https://docs.rs/causlane"
keywords = ["dispatch", "audit", "replay", "formal-methods", "kernel"]
categories = ["development-tools", "rust-patterns"]
# Honest MSRV floor: YAML-facing crates use `noyalib` 0.0.8, which requires 1.85.
# The toolchain channel stays canonical in `rust-toolchain.toml` (rolling
# `stable`); `.devinfra/tool-versions.json` records the observed resolved
# version. See docs/setup.md "Rust version policy".
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
