[package]
name = "causlane-codegen"
description = "Generated formal artifacts for causlane compiled bundles."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
causlane-contracts = { path = "../causlane-contracts", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
