[package]
name = "causlane-contracts"
description = "Registry and compiled bundle contracts for causlane."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
causlane-core = { path = "../causlane-core", version = "0.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
noyalib = { version = "0.0.8", features = ["compat-serde-yaml"] }

[lints]
workspace = true
