[package]
name = "causlane-core"
description = "Pure semantic dispatch kernel for causlane."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
