[package]
name = "causlane-formal"
description = "Formal-toolchain readiness checks (formal doctor) for causlane."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Smoke-level property-test scaffold (see tests/proptest_smoke.rs). Real
# property coverage is a tracked pre-publication stage.
proptest = "1"

[lints]
workspace = true
